src/test/deca/etapeB/valid/inequality.deca
// Description:
//    Opérateurs binaires d'inégalité
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2016

{
    int a = 5;
    int b = 2;
    (a > b);
}
