src/test/deca/etapeB/invalid/println_no_arg.deca
// Description:
//    Utilisation ud println
//
// Resultats:
//    Ligne 11 : pas assez d'argument
// 
// Historique:
//    cree le 01/01/2016

{
   println();
}
